# KnapsackProblem_NEDP

./: CMakeLists.txt  README.md  dynamic_programming.cpp  dynamic_programming.h  main.cpp  read_problem.cpp  read_problem.h
data/dataset1/: strong_1_10000_10.txt  strong_1_10000_100.txt  strong_1_10000_150.txt  strong_1_10000_200.txt  strong_1_10000_250.txt  strong_1_10000_300.txt  strong_1_10000_350.txt  strong_1_10000_400.txt  strong_1_10000_50.txt  strong_1_1000_10.txt  strong_1_1000_100.txt  strong_1_1000_150.txt  strong_1_1000_200.txt  strong_1_1000_250.txt  strong_1_1000_300.txt  strong_1_1000_350.txt  strong_1_1000_400.txt  strong_1_1000_50.txt  strong_1_100_10.txt  strong_1_100_100.txt  strong_1_100_150.txt  strong_1_100_200.txt  strong_1_100_250.txt  strong_1_100_300.txt  strong_1_100_350.txt  strong_1_100_400.txt  strong_1_100_50.txt  strong_2_10000_10.txt  strong_2_10000_100.txt  strong_2_10000_150.txt  strong_2_10000_200.txt  strong_2_10000_250.txt  strong_2_10000_300.txt  strong_2_10000_350.txt  strong_2_10000_400.txt  strong_2_10000_50.txt  strong_2_1000_10.txt  strong_2_1000_100.txt  strong_2_1000_150.txt  strong_2_1000_200.txt  (+500 more)
data/dataset2/: strong_1_1000000_2.txt  strong_1_1000000_4.txt  strong_1_1000000_6.txt  strong_1_100000_2.txt  strong_1_100000_4.txt  strong_1_100000_6.txt  strong_1_10000_2.txt  strong_1_10000_4.txt  strong_1_10000_6.txt  strong_1_1000_2.txt  strong_1_1000_4.txt  strong_1_1000_6.txt  strong_1_100_2.txt  strong_1_100_4.txt  strong_1_100_6.txt  strong_2_1000000_2.txt  strong_2_1000000_4.txt  (+283 more)
result/: r_strong_1_10000_150.txt
(+380 files in other folders)
